Changelog for Shake

    Add an explicit Verbosity type
    Change to lower precedence for *> etc
0.1.5
    Allow deepseq-1.2
0.1.4
    Don't export currentRule/currentStack
    Fix **>, was matching the wrong way round
    Fix FilePath normalise so it works properly on Windows
    Properly detect recursive rules, instead of looping
    Add *>> for building multiple files at once
0.1.3
    Fix a bug where a file rule could return with a lazy error
    Make sure all the files are stored in binary, not text
    Fix a pattern match error in getDirectoryFiles
0.1.2
    Add a warning in the description
0.1.1
    Significantly improved documentation
    system' now takes an initial argument for the program
0.1
    Many changes to signatures, some basic documentation
    Additional demo, to build shake itself
0.0
    Initial version, not ready for public use