@@ -1,5 +1,6 @@
 Changelog for Shake
 
+    Add an Oracle module
     Add an explicit Verbosity type
     Change to lower precedence for *> etc
 0.1.5
